# document_chat

./: .gitignore  main.py  pyproject.toml
notebook/: exception_experiment.ipynb  logging_experiment.ipynb  test.ipynb
src/api/: main.py
src/config/: config.yaml  config.yml
src/exception/: custom_exception.py
src/ingestion/: document_ingestion.py
src/logger/: __init__.py  custom_logger.py
src/prompts/: prompts.py
src/retrieval/: retrieval.py
src/utils/: config_loader.py  file_ops.py  model_loader.py
ui/: index.html
