[project]
name = "document-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.4.1",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]
